[gd_scene load_steps=2 format=3 uid="uid://bkrwx6su2nmuj"]

[ext_resource type="Script" path="res://script/menus/pause_menu/settings_menu.gd" id="1_cthkl"]

[node name="settings_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cthkl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = -105.0
offset_right = 163.5
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "mute"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="fullscreen" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
button_pressed = true
action_mode = 0
text = "fullscreen"

[node name="resolution" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[connection signal="value_changed" from="MarginContainer/VBoxContainer/volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/mute" to="." method="_on_mute_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/resolution" to="." method="_on_resolution_item_selected"]
